adding explore more button

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <nav class="backdrop-sepia bg-zinc-900 fixed z-[4] w-full flex justify-center items-center py-4 md:py-[2vh]">
         <h1 class="text-xl md:text-2xl font-semibold text-white">NEXUS FIVE</h1>
     </nav>
-    <div class="h-[100vh] w-[80vw] mx-[10vw]   z-[3] flex flex-col justify-center items-center text-5xl font-semibold">
+    <div class="h-[100vh]  w-[80vw] mx-[10vw]   z-[3] flex flex-col justify-center items-center text-5xl font-semibold">
         <!-- this is a pink color blur effect -->
-        <div class="rounded-full h-[45vh] w-[75vh]  bg-pink-500 blur-3xl mt-[10vh]  z-[-1] drop-shadow-[0_35px_35px_rgba(0,0,0,0.25)]"></div>
+        <div class="rounded-full yoyo h-[45vh] w-[75vh]  bg-pink-500 blur-3xl mt-[10vh]  z-[-1] drop-shadow-[0_35px_35px_rgba(0,0,0,0.25)]"></div>
 
-        <h1>WELCOME TO OUR MINOR PROJECT</h1>
-        <h1>HOME PAGE</h1>
+        <h1 class="welcome">WELCOME TO OUR MINOR PROJECT</h1>
+        <h1 class="welcome">HOME PAGE</h1>
         
         <!-- this is a green color blur effect -->
-        <div class="rounded-full  h-[45vh] w-[75vh]  bg-green-500 blur-3xl mt-[5vh] ml-[60vw]  z-[-1] drop-shadow-[0_35px_35px_rgba(0,0,0,0.25)]"></div>
+        <div class="rounded-full yoyo  h-[45vh] w-[75vh]  bg-green-500 blur-3xl mt-[5vh] ml-[60vw]  z-[-1] drop-shadow-[0_35px_35px_rgba(0,0,0,0.25)]"></div>
     </div>
 
    </div> 
@@ -215,6 +215,11 @@
             </div>
         </div>
     </section>
+
+
+    <div class="flex justify-center items-center py-20">
+        <button class="px-8 py-6 bg-orange-700 text-white rounded-lg"><a href="https://nexus-five-minor-project.vercel.app/">Explore More</a></button>
+    </div>
 
 
 <footer class="relative bg-gray-900 mt-50 text-white py-12 px-8 md:px-16 lg:px-24">
